--- a/gig-select-style.html
+++ b/gig-select-style.html
@@ -1,6 +1,6 @@
 <!--
  Webcomponents to manage custom select
- @version v0.1.2 - 2016-08-22
+ @version v0.1.3 - 2016-08-23
  @link https://github.com/gigigo-html5/gig-select
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -12,6 +12,13 @@
       * {
         box-sizing: border-box;
         font-family: Roboto, sans-serif;
+
+        -webkit-touch-callout: none; /* iOS Safari */
+        -webkit-user-select: none;   /* Chrome/Safari/Opera */
+        -khtml-user-select: none;    /* Konqueror */
+        -moz-user-select: none;      /* Firefox */
+        -ms-user-select: none;       /* Internet Explorer/Edge */
+        user-select: none;
       }
 
       ::content option {
