--- a/src/gig-select-style.html
+++ b/src/gig-select-style.html
@@ -4,6 +4,13 @@
       * {
         box-sizing: border-box;
         font-family: Roboto, sans-serif;
+
+        -webkit-touch-callout: none; /* iOS Safari */
+        -webkit-user-select: none;   /* Chrome/Safari/Opera */
+        -khtml-user-select: none;    /* Konqueror */
+        -moz-user-select: none;      /* Firefox */
+        -ms-user-select: none;       /* Internet Explorer/Edge */
+        user-select: none;
       }
 
       ::content option {
